# copier-fastapi-forge

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  copier.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: migration-traceability.toml  product-contract.md
docs/adr/: 0001-use-native-copier-interface.md  0002-place-backend-at-project-root.md  0003-use-deployment-api-key.md  0004-make-taskiq-optional.md  0005-make-postgresql-optional.md  0006-support-sqlalchemy-and-sqlmodel.md  0007-use-pydantic-ai-with-compatible-chat-api.md  0008-use-stateless-agent-http-api.md  0009-use-logfire-as-optional-telemetry.md  0010-use-root-agents-with-omp-rules.md  0011-final-capability-scope.md  0012-use-subtractive-migration.md  0013-revise-v1-migration-boundary.md  0014-require-migration-equivalence-acceptance.md  0015-adopt-native-evolution-baseline.md  0016-use-redis-streams-for-taskiq.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
legacy/: pyproject.toml
scripts/: check_migration_goldens.py  lint_template.py
template/: .env.example.jinja  .gitignore.jinja  AGENTS.md.jinja  CONTRIBUTING.md.jinja  ENV_VARS.md.jinja  MANUAL_STEPS.md.jinja  README.md.jinja  SECURITY.md.jinja  [% if database == 'postgresql' %]alembic.ini[% endif %].jinja  [% if database == 'postgresql' %]compose.yaml[% endif %].jinja  [% if database == 'postgresql' or background_tasks == 'taskiq' or enable_caching or rate_limiting == 'redis' %]compose.yaml[% endif %].jinja  pyproject.toml.jinja
tests/: __init__.py  conftest.py  migration-equivalence.toml  pairwise-equivalence.toml  profiles.py  test_agent_contract.py  test_core_runtime_contract.py  test_deployment_contract.py  test_docs_and_guidance_contract.py  test_generator_contract.py  test_http_contract.py  test_issue_10.py  test_issue_11.py  test_issue_12.py  test_issue_7.py  test_issue_8.py  test_issue_9.py  test_migration_goldens.py  test_persistence_contract.py  test_profile_contract.py  test_redis_and_taskiq_contract.py  test_template.py
(+157 files in other folders)
